2014-08-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 8.0+beta2.

2014-08-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-libraries 8.0+beta1 release.

	* CHANGES: Updated.

	* INSTALL: Added libhiredis and moved libssh to the right place.

2014-08-15  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/openvas_ssh_login.c (openvas_ssh_public_from_private): Fix
	segfault when an erroneous private key is used.

2014-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* omp/omp.c, omp/omp.h (omp_pause_task, omp_resume_paused_task): Delete
	functions.

2014-08-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/osp.c (osp_start_scan): Insert scan options in scanner_params xml
	element.

2014-08-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/example.target.locators: Removed. This example
	is not needed anymore as the target locator support was removed.

2014-08-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/ldap_connect_auth.c (ldap_auth_bind_query, ldap_auth_query):
	Removed unused functions.

	* misc/ldap_connect_auth.h: Removed protos accordingly.

2014-08-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Remove the target locator support.

	* misc/resource_request.c, misc/resource_request.h: Removed.

	* misc/CMakeLists.txt: Removed handling of module resource_request.

	* COPYING: Removed module resource_request.

2014-08-06  Henri Doreau <henri.doreau@gmail.com>

	* misc/openvas_server.h (openvas_server_send): Removed unused function.

2014-08-06  Henri Doreau <henri.doreau@gmail.com>

	* omp/omp.c (omp_ping, omp_authenticate, omp_authenticate_info_ext)
	(omp_create_task, omp_modify_task_file, omp_create_lsc_credential)
	(omp_create_lsc_credential_key: Replaced last openvas_server_send
	statements by openvas_server_sendf or openvas_server_sendf_xml
	equivalents.
